--- a/xooffer/public/views/register.html
+++ b/xooffer/public/views/register.html
@@ -4,6 +4,11 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3 login-form">
+        <div class="response-message success">
+          <p>
+            This is a text
+          </p>
+        </div>
         <form name="userForm" ng-submit="submit(userForm.$valid)">
           <md-input-container class="md-block">
             <label>Username</label>
