--- a/xooffer/views/index.ejs
+++ b/xooffer/views/index.ejs
@@ -41,6 +41,7 @@
     <script src="js/main.js"></script>
     <script src="js/config.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/controllers/landingPage.js"></script>
     <script src="js/controllers/topChartsPage.js"></script>
     <script src="js/controllers/singleOfferPage.js"></script>
