--- a/xooffer/public/views/login.html
+++ b/xooffer/public/views/login.html
@@ -4,17 +4,22 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3 login-form">
-        <form name="userForm">
+        <div class="response-message success toast">
+          <p>
+            This is a text
+          </p>
+        </div>
+        <form name="userForm" ng-submit="submit(userForm.$valid)">
           <md-input-container class="md-block">
-            <label>User Email</label>
-            <input type="text" required md-no-asterisk name="email" ng-model="user.email">
-            <div ng-messages="userForm.email.$error">
+            <label>Username</label>
+            <input type="text" required md-no-asterisk name="username" ng-model="user.username">
+            <div ng-messages="userForm.username.$error">
               <div ng-message="required">This is required.</div>
               <div ng-message="md-maxlength">The description must be less than 30 characters long.</div>
             </div>
           </md-input-container>
           <md-input-container class="md-block">
-            <label>User Password</label>
+            <label>Password</label>
             <input type="password" required md-no-asterisk name="password" ng-model="user.password">
             <div ng-messages="userForm.password.$error">
               <div ng-message="required">This is required.</div>
