--- a/xooffer/views/index.ejs
+++ b/xooffer/views/index.ejs
@@ -37,6 +37,7 @@
     <script src="bower_components/angular-aria/angular-aria.min.js"></script>
     <script src="bower_components/angular-messages/angular-messages.min.js"></script>
     <script src="bower_components/angular-material/angular-material.min.js"></script>
+    <script src="bower_components/angular-jwt/dist/angular-jwt.min.js"></script>
 
     <script src="js/main.js"></script>
     <script src="js/config.js"></script>
