--- a/xooffer/views/index.ejs
+++ b/xooffer/views/index.ejs
@@ -29,6 +29,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   	<script src="bower_components/angular/angular.js"></script>
   	<script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="bower_components/isotope/dist/isotope.pkgd.min.js"></script>
     <script src="bower_components/slick-carousel/slick/slick.js"></script>
     <script src="bower_components/angular-slick/dist/slick.js"></script>
@@ -55,3 +56,4 @@
     <script src="js/controllers/dashboard/user/dashboardUserPage.js"></script>
     <script src="js/controllers/dashboard/vendor/dashboardVendorPage.js"></script>
 </body>
+</html>
